2012-04-26  Junji Tojo <Junji.Tojo@cern.ch>
        * Added DAOD_ZEEGAMMA and DAOD_ZMUMUGAMMA in Reco_trf.py
        * Tagging as PATJobTransforms-00-04-10

2012-04-02 Graeme Stewart <graeme.andrew.stewart@cern.ch>
    * Add outputD2AODM_TOPFJETFile as to Reco_trf ListOfDefaultPositionalKeys
    * Tagging as PATJobTransforms-00-04-09

2012-04-20  Junji Tojo <Junji.Tojo@cern.ch>
        * Added NTUP_WPRIMEEN and NTUP_WPRIMEMN in Reco_trf.py and MergeNTUP_trf.py
        * Tagging as PATJobTransforms-00-04-08

2012-04-03 Attila Krasznahorkay <Attila.Krasznahorkay@cern.ch>
	* Removing the special treatment of the NTUP_MINBIAS output.
	  Now it is handled in the same way as all the other D3PD
	  output types.
	* Tagging as PATJobTransforms-00-04-06

2012-04-02 Graeme Stewart <graeme.andrew.stewart@cern.ch>
    * Add AddOutputTXT_FTKIPFile as recognised argument/type
    * Add outputTXT_FTKIPFile to Reco_trf ListOfDefaultPositionalKeys
    *** Important: From this tag onwards you require PyJobTransformsCore >= 00-09-17 ***
    * Tagging as PATJobTransforms-00-04-05

2012-03-30  David Rousseau  <droussea@voatlas107.cern.ch>
	* share/skeleton.ESDtoDPD_trf.py: disable if doTrigger=False
    * Tagging as PATJobTransforms-00-04-04
	
2012-03-21 Graeme Stewart <graeme.andrew.stewart@cern.ch>
    * Fixes to hybrid POOL merger to ensure correct JO fragments are invoked
    * Tagging as PATJobTransforms-00-04-03

2012-03-21 Graeme Stewart <graeme.andrew.stewart@cern.ch>
    * Move option for hybrid POOL merger (fastPoolMerge) inside the MergePoolJobTransform itself
    * Ensure that merged file is validated after events have been added
    * Tagging as PATJobTransforms-00-04-02 

2012-03-19 Graeme Stewart <graeme.andrew.stewart@cern.ch>
    * Improve robustness of hybrid merging:
        * Do not use shell execution
        * Ensure that stderr and stdout share a file handle
        * Behave correctly on negative return codes

2012-03-16  Junji Tojo <Junji.Tojo@cern.ch>