@@ -1,8 +1,13 @@
+2012-04-02 Graeme Stewart <graeme.andrew.stewart@cern.ch>
+    * Add rdo2rdotrig substep for input/outputRDOFile to allow RDO->RDOTrigger (Configuration.py)
+    * New AddRDOTrigger argument for transform steering (Configuration.py)
+    * Tagging as PATJobTransforms-00-04-11
+
 2012-04-26  Junji Tojo <Junji.Tojo@cern.ch>
         * Added DAOD_ZEEGAMMA and DAOD_ZMUMUGAMMA in Reco_trf.py
         * Tagging as PATJobTransforms-00-04-10
 
-2012-04-02 Graeme Stewart <graeme.andrew.stewart@cern.ch>
+2012-04-25 Graeme Stewart <graeme.andrew.stewart@cern.ch>
     * Add outputD2AODM_TOPFJETFile as to Reco_trf ListOfDefaultPositionalKeys
     * Tagging as PATJobTransforms-00-04-09
 
